objects/Survey__c.object
<CustomObject>
    <description>Stores the response of the user for the survey sent on case closure through clicktools.</description>
    <fields>
        <fullName>Answer1__c</fullName>
        <label>Answer1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <label>Answer2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <label>Answer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_4__c</fullName>
        <label>Answer 4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_5__c</fullName>
        <label>Answer 5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRMHow_well_were_the_questions_answered__c</fullName>
        <label>How well were the questions answered?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRMPost_Training_User_Confidence_Rating__c</fullName>
        <label>Post Training User Confidence Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Any_other_comments__c</fullName>
        <label>Any other comments?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Can_learning_be_applied_to_workflow__c</fullName>
        <label>Can learning be applied to workflow?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Customer_Testimonial__c</fullName>
        <label>Customer Testimonial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Dedicated_Trainer__c</fullName>
        <label>Dedicated Trainer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Features_to_Add_to_Trained_Service__c</fullName>
        <label>Features to Add to Trained Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Have_you_learnt_something_new__c</fullName>
        <label>Have you learnt something new</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Highlights_of_Product_Trained_On__c</fullName>
        <label>Highlights of Product Trained On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_How_could_we_improve_the_training__c</fullName>
        <label>How could we improve the training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_How_do_you_feel_about_using_the_ser__c</fullName>
        <label>How do you feel about using the service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_How_long_was_your_training__c</fullName>
        <label>How long was your training?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_How_was_your_training_conducted__c</fullName>
        <label>How was your training conducted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Job_Title_Other__c</fullName>
        <label>Job Title - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Legal_Research_Query_Initiation__c</fullName>
        <label>General Legal Research Query Initiation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Please_select_your_job_title__c</fullName>
        <label>Please select your job title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Post_Training_Likelihood_of_Use__c</fullName>
        <label>Post Training Likelihood of Service Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Pre_Training_User_Confidence_Rating__c</fullName>
        <label>Pre Training User Confidence Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Prior_Training_Received__c</fullName>
        <label>Prior Training Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Products_Trained__c</fullName>
        <label>Products Trained</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Testimonial_Details__c</fullName>
        <label>Testimonial Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_What_have_you_learned_from_this_tra__c</fullName>
        <label>What have you learned from this training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Will_this_training_help_to_increase__c</fullName>
        <label>Will this training help to increase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Would_you_recommend_the_Training__c</fullName>
        <label>Would you recommend the Training?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <label>Question1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <label>Question2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_4__c</fullName>
        <label>Question 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_5__c</fullName>
        <label>Question 5</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>